@@ -2,12 +2,13 @@ package gate.lang.contentDisposition;
 
 import gate.error.AppError;
 import gate.error.ConversionException;
+import gate.lang.contentType.ContentTypeParser;
+import gate.lang.contentType.ContentTypeScanner;
 import java.io.IOException;
 import java.io.StringReader;
 import java.io.UncheckedIOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.util.Collections;
 import java.util.Map;
@@ -20,7 +21,7 @@ public class ContentDisposition
 	private final Map<String, String> parameters;
 
 	public ContentDisposition(String value,
-		Map<String, String> parameters)
+			Map<String, String> parameters)
 	{
 		Objects.requireNonNull(parameters);
 		this.value = value;
@@ -46,36 +47,34 @@ public class ContentDisposition
 			string.append(value);
 
 		parameters
-			.entrySet().forEach(e ->
-			{
-				string.append(';').append(e.getKey()).append('=').append(URLEncoder.encode(e.getValue(), StandardCharsets.UTF_8));
-			});
+				.entrySet().forEach(e ->
+				{
+					try
+					{
+						string.append(';').append(e.getKey()).append('=').append(URLEncoder.encode(e.getValue(), "UTF-8"));
+					} catch (UnsupportedEncodingException ex)
+					{
+						throw new UncheckedIOException(ex);
+					}
+				});
 
 		return string.toString();
 	}
 
-	public static ContentDisposition parse(String string) throws ParseException
+	public static ContentDisposition valueOf(String string)
 	{
-		try ( ContentDispositionParser parser = new ContentDispositionParser(new ContentDispositionScanner(new StringReader(string))))
+		try (ContentDispositionParser parser = new ContentDispositionParser(new ContentDispositionScanner(new StringReader(string))))
 		{
 			try
 			{
 				return parser.parse();
+			} catch (ParseException ex)
+			{
+				throw new IllegalArgumentException(string + " is not a valid disposition type");
 			} catch (IOException ex)
 			{
-				throw new AppError(ex);
+				throw new UncheckedIOException(ex);
 			}
-		}
-	}
-
-	public static ContentDisposition valueOf(String string) throws ConversionException
-	{
-		try
-		{
-			return parse(string);
-		} catch (ParseException ex)
-		{
-			throw new ConversionException("Invalid content disposition header");
 		}
 	}
 }
