@@ -2,7 +2,6 @@ package gate.lang.contentType;
 
 import java.io.IOException;
 import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
 import java.text.ParseException;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -18,44 +17,55 @@ public class ContentTypeParser implements AutoCloseable
 	}
 
 	public ContentType parse() throws IOException,
-		ParseException
+			ParseException
 	{
 
 		Map<String, String> parameters = new LinkedHashMap<>();
 
 		Object current = scanner.scan();
-		if (!(current instanceof String type))
+		if (!(current instanceof String))
 			throw new ParseException("expected type and found " + current, 0);
+		String type = (String) current;
 
 		current = scanner.scan();
 		if (!Character.valueOf('/').equals(current))
 			throw new ParseException("expected / and found " + current, 0);
 
 		current = scanner.scan();
-		if (!(current instanceof String subtype))
+		if (!(current instanceof String))
 			throw new ParseException("expected subtype and found " + current, 0);
+		String subtype = (String) current;
 
 		current = scanner.scan();
+		while (Character.valueOf(' ').equals(current))
+			current = scanner.scan();
 		while (Character.valueOf(';').equals(current))
 		{
 			current = scanner.scan();
+			while (Character.valueOf(' ').equals(current))
+				current = scanner.scan();
 
-			if (!(current instanceof String name))
+			if (!(current instanceof String))
 				throw new ParseException("expected parameter and found " + current, 0);
+			String name = (String) current;
 			current = scanner.scan();
 
 			if (!Character.valueOf('=').equals(current))
 				throw new ParseException("expected = and found " + current, 0);
 			current = scanner.scan();
 
-			if (!(current instanceof String value))
+			if (!(current instanceof String))
 				throw new ParseException("expected value and found " + current, 0);
+			String value = (String) current;
 			current = scanner.scan();
 
-			parameters.put(name, URLDecoder.decode(value, StandardCharsets.UTF_8));
+			parameters.put(name.trim(), URLDecoder.decode(value, "UTF-8"));
+
+			while (Character.valueOf(' ').equals(current))
+				current = scanner.scan();
 		}
 
-		return new ContentType(type, subtype, parameters);
+		return ContentType.of(type, subtype, parameters);
 	}
 
 	@Override
